--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-For more information about the nodemesh visit:
+For more information and documentation about the nodemesh visit:
 
 http://nodemesh.enleap.com
